--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Esse é meu site
     <li><a href="index.html">Home</a></li>
     <li><a href="sobre.html">Sobre</a></li>
     <li><a href="contato.html">Contato</a></li>
+	<li><a href="teste.html">Outros...</a></li>
 </ul>
 
 </body>
